--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I recently completed a rigorous cybersecurity bootcamp, earning both Network+ and 
+										Security+ certifications. This achievement has ignited my passion for the field, and I am 
+										excited to embark on more technical projects. Armed with comprehensive knowledge and 
+										hands-on experience, I am eager to tackle real-world challenges, contribute to the security
+										of digital landscapes, and continue my journey towards becoming a proficient cybersecurity 
+										professional.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
